2004-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-tex.scm (ps-output-expression): Eval embedded-ps
	instructions in output-ps module.

	* scm/lily.scm: Do not load output-ps module.

	* lily/paper-outputter.cc (Paper_outputter): Attempt to eval
	output-ps in safe mode.

2004-03-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/span-dynamic-performer.cc (process_music): remove spurious
	warning.

	* lily/context-def.cc (Context_def): init name to ""

	* lily/font-interface.cc: add font-encoding property.

	* scm/lily.scm (chain-assoc-get): bugfix.

	* lily/paper-book.cc (stencil2line): protect static SCM.

	* lily/font-interface.cc (text_font_alist_chain): rename function,
	and use text-font-defaults. 

	* lily/font-select.cc (properties_to_font_size_family): call SCM code.

	* scm/paper.scm (paper-set-staff-size): use new function.

	* scm/new-font.scm (make-font-tree): new function.

2004-03-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-book.cc (output): Bugfix: no output if no \paper.

	* scm/lily.scm (get-output-module): New function.
	(output-alist): Remove ,ps-output-expression.

	* scm/output-tex.scm (ps-output-expression): New function.

	* scm/output-ps.scm (ps-output-expression): Remove.
	(header, start-page): Output page metadata.

	* lily/paper-outputter.cc (Paper_outputter)[PAGE_LAYOUT]:
	initialise output_module_.  Do not write part of header.
	(output_scheme)[PAGE_LAYOUT]: Output through output_module_.
	(output_header): Output full header.

	* scm/define-markup-commands.scm (bigger, smaller): Avoid crash.
	FIXME.

2004-03-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/new-font.scm: new file. Tree based font lookup.

	* scm/lily.scm (assoc-get): take default argument. Remove
	assoc-get-default.
	(chain-assoc-get): use chain-assoc-get everywhere.

	* scripts/convert-ly.py (FatalConversionError.subst_in_trans):
	autobeamsettings conversion bug.

	* lily/include/global-context.hh (Context): clean-up data hiding.
