@@ -517,9 +517,10 @@ class Lilypond_snippet (Snippet):
 		return images
 		
 	def output_html (self):
-		str = self.output_print_filename (HTML)
+		str = ''
 		base = self.basename ()
 		if format == HTML:
+			str += self.output_print_filename (HTML)
 			if VERBATIM in self.options:
 				verb = verbatim_html (self.substring ('code'))
 				str += write (output[HTML][VERBATIM] % vars ())
@@ -544,9 +545,10 @@ class Lilypond_snippet (Snippet):
 		return str
 
 	def output_latex (self):
-		str = self.output_print_filename (LATEX)
+		str = ''
 		base = self.basename ()
 		if format == LATEX:
+			str += self.output_print_filename (LATEX)
 			if  VERBATIM in self.options:
 				verb = self.substring ('code')
 				str += (output[LATEX][VERBATIM] % vars ())
@@ -565,6 +567,11 @@ class Lilypond_snippet (Snippet):
 
 	def output_texinfo (self):
 		str = ''
+		# self.output_print_filename (TEXINFO)
+		str += ('@html\n' + self.output_print_filename (HTML)
+			+ '\n@end html\n')
+		str += ('@tex\n' + self.output_print_filename (LATEX)
+			+ '\n@end tex\n')
 		base = self.basename ()
 		if TEXIDOC in self.options:
 			texidoc = base + '.texidoc'
