@@ -1,5 +1,8 @@
 2004-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scripts/lilypond-book.py (Lilypond_snippet.output_texinfo):
+	Print filename for HTML, LATEX, before texidoc.
+
 	* scm/output-tex.scm (ps-output-expression): Eval embedded-ps
 	instructions in output-ps module.
 
